--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "CaloriesApp",
+  "name": "calories-app",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,12 +10,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
+    "@react-navigation/stack": "^6.4.0",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-gesture-handler": "^2.17.1",
     "react-native-safe-area-context": "^4.10.7",
-    "react-native-screens": "^3.32.0"
+    "react-native-screens": "^3.32.0",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
