--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
     "@react-navigation/stack": "^6.4.0",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
+    "date-fns": "^3.6.0",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-gesture-handler": "^2.17.1",
+    "react-native-reanimated": "^3.13.0",
+    "react-native-redash": "^18.1.3",
     "react-native-safe-area-context": "^4.10.7",
     "react-native-screens": "^3.32.0",
+    "react-native-svg": "^15.3.0",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
